--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,33 +1,31 @@
 #############################################################################
 #
-# log4j Settings - Load Test Mode 
+# log4j Settings - Development Mode 
 #
-# The log4j configuration used by XLT when running the tests as a load test.
+# The log4j configuration used by XLT when running the web tests from inside 
+# your IDE during development.
 #
 #############################################################################
 
 ### Logger definitions ###
 
-log4j.rootLogger = warn, file
+log4j.rootLogger = info, console, file
 
-log4j.logger.runtime = warn
-log4j.logger.com.xceptance = warn
-log4j.logger.com.gargoylesoftware.htmlunit = warn
-
-# Suppress log messages about obsolete MIME types, etc. Deactivate if necessary.
-log4j.logger.com.gargoylesoftware.htmlunit.IncorrectnessListenerImpl = fatal
+log4j.logger.runtime = debug
+log4j.logger.com.xceptance = debug
+log4j.logger.com.gargoylesoftware.htmlunit = debug
 
 
 ### Appender definitions ###
 
-## console (typically not used)
+## console
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = [%d{HH:mm:ss,SSS}] %-5p [%t] - %m%n
 
 ## log file
 log4j.appender.file = org.apache.log4j.RollingFileAppender
-log4j.appender.file.File = ${com.xceptance.xlt.agent.home}/results/agent.log
+log4j.appender.file.File = ./results/xlt.log
 log4j.appender.file.MaxFileSize = 10MB
 log4j.appender.file.MaxBackupIndex = 10
 log4j.appender.file.layout = org.apache.log4j.PatternLayout
