--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,9 +1,6 @@
 #############################################################################
 #
-# log4j Settings - Development Mode 
-#
-# The log4j configuration used by XLT when running the web tests from inside 
-# your IDE during development.
+# log4j Settings 
 #
 #############################################################################
 
