--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,16 @@
             <version>4.9.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.dataformat</groupId>
+        	<artifactId>jackson-dataformat-csv</artifactId>
+        	<version>2.9.0</version>
+        </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.dataformat</groupId>
+        	<artifactId>jackson-dataformat-yaml</artifactId>
+        	<version>2.9.0</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
