--- a/syntax.yml
+++ b/syntax.yml
@@ -92,6 +92,10 @@
     - header_2 : value
     - header_3 : value
 
+- Cookies :
+    - cookie_name_1 : value
+    - cookie_name_2 : value
+
 - Parameters :
     - p_1 : v_1
     - p_2 : v_2    
