Added TestCase for ActionItemParser in Csv. Changed syntax.yml so it is correct and more informative.

--- a/syntax.yml
+++ b/syntax.yml
@@ -52,6 +52,7 @@
             - validation_name_10 :
                 Cookie : value
                 Matches : value
+            # and more...
 
         Store : #Optional
             - variable_1 :
@@ -100,13 +101,6 @@
     - p_1 : v_1
     - p_2 : v_2    
 
-#Not yet implemented
-- Default-Set :
-    Action :
-        Request :
-            Method : POST
-    #...
-
 
 #Delete default values
 - Cookies : delete
@@ -115,10 +109,3 @@
 - Url : delete
 - Method : delete
 - Xhr : delete
-
-#Not yet implemented
-- Default-Remove :
-    Action :
-        Request :
-            Method : delete
-    #...
