Added apache commons csv to pom. Implemented an apache csv parser.

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <version>4.9.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-csv</artifactId>
+        	<version>1.5</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
