Some minor changes to parameter names and comments.

--- a/syntax.yml
+++ b/syntax.yml
@@ -99,7 +99,11 @@
 
 - Parameters :
     - p_1 : v_1
-    - p_2 : v_2    
+    - p_2 : v_2
+
+- Static :
+    - https://www.xceptance.com
+    - https://www.xceptance.com
 
 
 #Delete default values
