--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.xceptance</groupId>
     <artifactId>xlt-nocoding</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
 
     <name>xlt-nocoding</name>
     <description>A library based on XLT to run Web test cases that are written in either YAML or CSV format.</description>
@@ -68,25 +68,30 @@
             <version>2.1b5</version>
         </dependency>
         <dependency>
-        	<groupId>com.fasterxml.jackson.dataformat</groupId>
-        	<artifactId>jackson-dataformat-csv</artifactId>
-        	<version>2.9.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
         </dependency>
         <dependency>
-        	<groupId>com.fasterxml.jackson.dataformat</groupId>
-        	<artifactId>jackson-dataformat-yaml</artifactId>
-        	<version>2.9.0</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.9.0</version>
         </dependency>
         <dependency>
             <groupId>com.xceptance</groupId>
             <artifactId>xlt</artifactId>
-            <version>4.11.0</version>
+            <version>4.12.0</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-        	<groupId>org.apache.commons</groupId>
-        	<artifactId>commons-csv</artifactId>
-        	<version>1.5</version>
         </dependency>
     </dependencies>
 
