--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.xceptance</groupId>
     <artifactId>xlt-nocoding</artifactId>
-    <version>2.3.0</version>
+    <version>3.0.0-beta-1</version>
 
     <name>xlt-nocoding</name>
     <description>A library based on XLT to run Web test cases that are written in either YAML or CSV format.</description>
@@ -73,15 +73,15 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-		<dependency>
-		    <groupId>org.yaml</groupId>
-		    <artifactId>snakeyaml</artifactId>
-		    <version>1.28</version>
-		</dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.28</version>
+        </dependency>
         <dependency>
             <groupId>com.xceptance</groupId>
             <artifactId>xlt</artifactId>
-            <version>5.3.0</version>
+            <version>6.0.0-beta-1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
