#16: Feature Request: support regex extractions also for Store / Header - added regex support to Header and Cookie extractors - added corresponding unit tests - adjusted the cheat sheet with examples - updated dependencies - prepared beta release

--- a/syntax.yml
+++ b/syntax.yml
@@ -58,12 +58,20 @@
             - variable_1 :
                 XPath : path
             - variable_2 :
-                Regexp : path
+                Regex : path
                 Group : 1 # Optional to capture a group from regex
             - variable_3 :
-               Header : header
+                Header : header
             - variable_4 :
+                Header : header
+                Regex : path
+                Group : 1 # Optional to capture a group from regex
+            - variable_5 :
                 Cookie : cookie
+            - variable_6 :
+                Cookie : cookie
+                Regex : path
+                Group : 1 # Optional to capture a group from regex
     Subrequests :
         - Xhr :
             Name : Xhr subrequest
