--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>4.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>XLT No-Coding Library</name>
+    <name>XLT No-Coding</name>
     <description>A library based on XLT to run Web test cases that are written in either YAML or CSV format.</description>
     <url>https://github.com/Xceptance/xlt-nocoding</url>
     <inceptionYear>2013</inceptionYear>
@@ -96,13 +96,11 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <additionalparam>--allow-script-in-comments</additionalparam>
                     <author>false</author>
                     <breakiterator>true</breakiterator>
                     <failOnError>false</failOnError>
                     <notimestamp>true</notimestamp>
                     <quiet>true</quiet>
-                    <source>11</source>
                 </configuration>
             </plugin>
             <plugin>
